Feature ETP-1546: Fixes tests in Gradle plugin